mise a jout des dependances

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -18,7 +18,7 @@
         {
             "label": "Run CMake",
             "type": "shell",
-            "command": "cmake",
+            "command": "C:/MinGW/bin/g++.exe",
             "args": [
                 "-S",
                 "${workspaceFolder}",
