ClientGroupFactory v1.1 and slight change to the clientModel class

--- a/src/config.json
+++ b/src/config.json
@@ -3,7 +3,7 @@
     "host": "localhost",
     "port": 3306
   },
-  "otherConfig": {
-
+  "path": {
+    "envPath": "/home/wolverine/CLionProjects/Projet_Programmation_Syteme/Project_Prog_Concurrente/src/.env"
   }
 }
