--- a/src/.env
+++ b/src/.env
@@ -5,4 +5,6 @@ TIME_WASH_TOWELS=
 TIME_WAIT_COOL_CLIENT=20
 TIME_WAIT_HURRY_CLIENT=10
 TIME_WAIT_DEFAUL=30
-TIME_COOK_PLATES_= #add the others plates after and the time of cook of all them
+TIME_COOK_PLATES_=20
+LOCATION_TABLE_ASSET="/home/wolverine/CLionProjects/Projet_Programmation_Syteme/Project_Prog_Concurrente/src/assets/tables.png"
+LOCATION_BACKGROUND_ASSET="/home/wolverine/CLionProjects/Projet_Programmation_Syteme/Project_Prog_Concurrente/src/assets/restaurant.png"
